icon margin updated

--- a/css/styles.css
+++ b/css/styles.css
@@ -287,6 +287,8 @@ a {
 }
 .nav__container .icon {
   cursor: pointer;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 @media screen and (max-width: 1024px) {
